--- a/archives/zhihu-search/2024-03-27.md
+++ b/archives/zhihu-search/2024-03-27.md
@@ -1,9 +1,9 @@
 # 2024-03-27
 
-共 11 条
+共 13 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Wed Mar 27 2024 14:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Mar 27 2024 15:00:37 GMT+0800 (China Standard Time) -->
 1. [碳中和](https://www.zhihu.com/search?q=碳中和)
 1. [在职研究生](https://www.zhihu.com/search?q=在职研究生)
 1. [考公资料](https://www.zhihu.com/search?q=考公资料)
@@ -11,8 +11,10 @@
 1. [雅思机考](https://www.zhihu.com/search?q=雅思机考)
 1. [雅思报名](https://www.zhihu.com/search?q=雅思报名)
 1. [资料分析](https://www.zhihu.com/search?q=资料分析)
-1. [选调生报名基本条件](https://www.zhihu.com/search?q=选调生报名基本条件)
+1. [软件工程](https://www.zhihu.com/search?q=软件工程)
+1. [openai](https://www.zhihu.com/search?q=openai)
 1. [考公最吃香的十大专业](https://www.zhihu.com/search?q=考公最吃香的十大专业)
+1. [选调生报名基本条件](https://www.zhihu.com/search?q=选调生报名基本条件)
 1. [非全日制计算机研究生](https://www.zhihu.com/search?q=非全日制计算机研究生)
 1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
 <!-- END ZHIHUSEARCH -->
